--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
     <title>Hello</title>
 </head>
 <body>
-    <h1>Welcome To my website</h1>
+    <h1 style="color: blue;">Welcome To my website</h1>
     <h2>I am Bachir</h2>
    Hello 
 </body>
